<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="56dp"
    android:background="?attr/selectableItemBackground">



    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="56dp"

        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"

        tools:text="Bacon Flavor"
        android:textColor="?android:attr/textColorPrimary"
        />

    <ImageView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="56dp"

        android:layout_toRightOf="@+id/title"
        android:layout_toEndOf="@+id/title"
        android:layout_marginLeft="8dp"

        android:src="@drawable/ic_checkbox_marked_circle_outline_black_18dp"
        android:tint="@color/green_500"

        android:visibility="gone"
        tools:visibility="visible"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/primaryColor"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"

            tools:background="#FF5555"
            />

        <ImageView
            android:id="@+id/primaryColorDark"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"

            tools:background="#FF0000"
            />

        <ImageView
            android:id="@+id/accentColor"
            android:layout_width="24dp"
            android:layout_height="24dp"

            tools:background="#33cc99"
            />

    </LinearLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/daynight_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        android:visibility="gone"
        tools:visibility="visible">

        <Button style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/opt_auto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/daynight_auto"/>

        <Button style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/opt_system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/daynight_system"
            />

        <Button style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/opt_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/daynight_off"
            />

        <Button style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/opt_on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/daynight_on"
            />

    </android.support.v7.widget.ButtonBarLayout>

</RelativeLayout>