<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"

        android:background="?attr/colorPrimary"
        android:elevation="6dp"

        android:theme="?attr/toolbarTheme"
        app:popupTheme="?attr/toolbarPopupTheme"

        android:visibility="gone"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/appbar"

        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clipToPadding="false"
        />

</RelativeLayout>